--- a/main.css
+++ b/main.css
@@ -461,14 +461,14 @@ li{
 
 /*Start media queries*/
 
-@media screen and(max-width: 768px){
+@media screen and (max-width: 768px){
     body{
         background: url("images/sitebg.jpg") no-repeat center fixed;
         background-size: cover; 
     }
 
     .landing-text h1{
-        font-size: 15rem;
+        font-size: 10rem;
     }
 
     .landing-text h6{
@@ -526,8 +526,7 @@ li{
 
 }
 
-
-@media screen and(max-width: 600px){
+@media screen and (max-width: 600px){
 
     .menu-toggler{
         top:2rem;
@@ -535,7 +534,7 @@ li{
     }
 
     .landing-text h1{
-        font-size: 8rem;
+        font-size: 5rem;
     }
 
     .landing-text h6{
@@ -550,9 +549,13 @@ li{
         flex-direction:column;
     }
 
+    .about-details p{
+        font-size: 1.5rem
+    }
+
     .profile-img{
         margin: 0 0 7rem 0;
-        order: 1; /* make the image come before the descriptions*/
+        order: 0; /* make the image come before the descriptions*/
     }
 
     .portfolio-item{
@@ -565,7 +568,7 @@ li{
 
     .portfolio-description{
         margin: 0;
-        order: 2; /*make descriptions come after image*/
+        order: 1; /*make descriptions come after image*/
     }
 
     .timeline p{
